--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
 
 	<link rel ="stylesheet" type="text/css" href="css/main.css">
 	<link rel="stylesheet" type="text/css" href="css/normalize.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+ 
 	
 </head>
 
@@ -17,10 +18,10 @@
       <h1>Ivy Wambui Khamisi.<br>
           Web Developer.
       </h1>
-      <i class="fa fa-facebook-square" style="font-size:30px;"></i>
-      <i class="fa fa-git-square" style="font-size: 30px;"></i>
-      <i class="fa fa-google-plus-square" style="font-size: 30px;"></i>
-      <i class="fa fa-whatsapp" style="font-size: 30px;"></i>
+      <a target="_blank" href="https://www.facebook.com/search/top/?q=kendyivy"><i class="fa fa-3x fa-facebook-square" style="font-size:30px;"></i>
+      <a target="_blank" href="https://github.com/kendyivy"><i class="fa fa-git-square" style="font-size: 30px;"></i>
+      <a target="_blank" href="https://aboutme.google.com/u/0/"><i class="fa fa-google-plus-square" style="font-size: 30px;"></i>
+      <a target="_blank" href="https://web.whatsapp.com/"><i class="fa fa-whatsapp" style="font-size: 30px;"></i>
      </div>
      <div class="main3">
       <div class="img">
